# verilog_parser_antlr

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Doxygen.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  Verilog2001BaseListener.cpp  Verilog2001BaseListener.h  Verilog2001Lexer.cpp  Verilog2001Listener.cpp  main.cpp
src/circuit/: CMakeLists.txt  data_layer.h
src/circuit_builder/: CMakeLists.txt  circuit.h  circuit_builder.cpp  circuit_builder.h  circuit_def.cpp  circuit_def.h
src/parser/: CMakeLists.txt  Verilog2001BaseListener.cpp  Verilog2001BaseListener.h  Verilog2001Lexer.h  Verilog2001Listener.h  Verilog2001Parser.cpp  Verilog2001Parser.h  parser_conversions.cpp  parser_conversions.h
test/input/: continuous_assignment.v  n_input_gates.v  n_output_gates.v  test.v  test1.v  tristate_gates.v
